# libuia

./: CMakeLists.txt
include/uia/: forward_ptrs.h  host.h  message_receiver.h  peer_identity.h  socket_host_state.h
include/uia/channels/: socket_channel.h
include/uia/comm/: packet_receiver.h  socket.h  socket_host_interface.h  socket_protocol.h  udp_socket.h
include/uia/negotiation/: channel_initiator.h  initiator.h  kex_host_state.h  responder.h
lib/: CMakeLists.txt  host.cpp  message_receiver.cpp  peer.cpp  peer_identity.cpp  socket_host_state.cpp
lib/channels/: channel_host_state.cpp  socket_channel.cpp
lib/comm/: packet_receiver.cpp  platform-unix.cpp  platform-win.cpp  socket.cpp  socket_endpoint.cpp  socket_host_state.cpp  udp_socket.cpp
lib/negotiation/: channel_initiator.cpp  initiator.cpp  kex_host_state.cpp  responder.cpp
lib/simulation/: sim_connection.cpp  sim_packet.cpp  sim_socket.cpp  simulator.cpp
tests/: CMakeLists.txt  simulator_fixture.h  test_endpoint_set.cpp  test_negotiation.cpp  test_run_udp_receiver.cpp  test_udp_socket.cpp
